End of Module 11

--- a/DatingApp-SPA/src/app/nav/nav.component.css
+++ b/DatingApp-SPA/src/app/nav/nav.component.css
@@ -10,3 +10,9 @@
 .navbar .dropdown-menu a:hover {    
     color: #fff !important;
 }
+
+img {
+    max-height: 40px;
+    border: 2px solid white;
+    display: inline;
+}
